src/assets/css/home.css
.homeWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  z-index: 1;
  max-width: 1300px;
}

.picAndText {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 1300px;
}

.homeHeadingSelfie {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.homeBioHeading {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.homeSelfie {
  min-width: 150px;
  min-height: 150px;
  border-radius: 100%;
  background-position: center;
  background-size: cover;
  background-image: url(../../../public/cv-pic.jpg);
  margin-bottom: 16px;
}

.homeBioBlack {
  display: flex;
  flex-direction: column;
  background-color: #1b263b;
  padding: 0 2em;
  margin: 1em 0;
  margin: 0 0;
}

.homeBioBlack p {
  line-height: 25px;
  color: white;
}

.homeBioGrey {
  display: flex;
  flex-direction: column;
  background-color: #e0e1dd;
  line-height: 25px;
  padding: 0 2em;
  margin: 0 0;
}

.homeBioNav {
  color: whitesmoke;
}

.homePic {
  width: 100%;
}

.homeContact {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.homeBioContactHeading {
  display: flex;
  color: whitesmoke;
  justify-content: center;
  margin: 1em 0;
}

.homeBioContactButton {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: black;
  text-decoration: none;
  background-color: whitesmoke;
  border: 1px solid black;
  padding: 1em;
  margin: 1em;
  width: 40%;
  max-width: 200px;
}

.homeBioContactButton:hover {
  background-color: black;
  color: #f0f7ee;
}

@media (min-width: 700px) {
  .picAndText {
    flex-direction: row-reverse;
    width: 100%;
  }

  .reverse {
    flex-direction: row;
  }
  .homeWrapper img {
    height: 200px;
  }
  .homeBioBlack,
  .homeBioGrey {
    height: 200px;
    text-align: center;
    justify-content: center;
  }
}

@media (min-width: 1000px) {
  .homeWrapper p {
    font-size: larger;
  }
  .homeWrapper img {
    height: 400px;
  }
  .homeBioBlack,
  .homeBioGrey {
    height: 400px;
  }
}

